examples/test/testpolicy13077.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13077
  namespace: namespace38
spec:
  podSelector:
    matchLabels:
      key43: value36
      key36: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value10
          key46: value23
      podSelector:
        matchLabels:
          key18: value15
